improve documentation and showcase yamls
