# server/src/main/resources/api.yaml
@@ -81,7 +81,7 @@ paths:
           in: query
           description:
           type: string
-          default: some Text
+          default: hello
         - name: validFrom
           in: query
           description:
@@ -116,7 +116,7 @@ paths:
           in: query
           description:
           type: string
-          default: '5-10'
+          default: 5
         - name: speed
           in: query
           description:
@@ -128,8 +128,6 @@ paths:
           type: array
           items:
             type: string
-
-
 
   /company/bmw:
     post:
@@ -159,7 +157,7 @@ paths:
           in: query
           description:
           type: string
-          default: some Text
+          default: hello
         - name: validFrom
           in: query
           description:
@@ -194,7 +192,7 @@ paths:
           in: query
           description:
           type: string
-          default: '5-10'
+          default: 5
         - name: speed
           in: query
           description:
@@ -235,7 +233,7 @@ paths:
           in: query
           description:
           type: string
-          default: some Text
+          default: hello
         - name: validFrom
           in: query
           description:
@@ -270,12 +268,87 @@ paths:
           in: query
           description:
           type: string
-          default: '2-10'
+          default: 2
         - name: speed
           in: query
           description:
           type: string
           default: 150
+        - name: options
+          in: query
+          description:
+          type: array
+          items:
+            type: string
+  /company/vw:
+    post:
+      summary: Test case
+      description: description
+      tags:
+        - Companies
+      consumes:
+        - text/plain
+      parameters:
+        - name: id
+          in: query
+          description:
+          type: string
+          default: 1234
+        - name: productName
+          in: query
+          description:
+          type: string
+          default: Moia
+        - name: provider
+          in: query
+          description:
+          type: string
+          default: VW
+        - name: description
+          in: query
+          description:
+          type: string
+          default: hello
+        - name: validFrom
+          in: query
+          description:
+          type: string
+          default: 20180720
+        - name: validTo
+          in: query
+          description:
+          type: string
+          default: 20180725
+        - name: locationStart
+          in: query
+          description:
+          type: string
+          default: Munich
+        - name: locationEnd
+          in: query
+          description:
+          type: string
+          default: Berlin
+        - name: price
+          in: query
+          description:
+          type: string
+          default: 70
+        - name: currency
+          in: query
+          description:
+          type: string
+          default: eur
+        - name: co2emission
+          in: query
+          description:
+          type: string
+          efault: 2
+        - name: speed
+          in: query
+          description:
+          type: string
+          default: 100
         - name: options
           in: query
           description:
